# task-management-assignment

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: task.py
app/repositories/: task_repository.py
app/routers/: task_router.py
app/schemas/: task.py
app/services/: task_service.py
docker/: Dockerfile  docker-compose.yml
